Docker-compose and UI updates

--- a/ui/attack_dashboard.html
+++ b/ui/attack_dashboard.html
@@ -261,6 +261,14 @@
 </head>
 <body>
     <div class="dashboard-container" x-data="attackDashboard()">
+        <!-- Global Docs Navigation -->
+        <nav class="top-nav" aria-label="Global documentation">
+            <a href="docs.html">Docs</a>
+            <span> | </span>
+            <a href="quick-start.html">Quick Start</a>
+            <span> | </span>
+            <a href="faq-support.html">FAQ</a>
+        </nav>
         <!-- Header -->
         <div class="dashboard-header">
             <h1>
