--- a/ui/index.html
+++ b/ui/index.html
@@ -26,6 +26,24 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="docs.html" class="nav-link">
+                        <i class="fas fa-book"></i>
+                        <span>Docs</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="quick-start.html" class="nav-link">
+                        <i class="fas fa-bolt"></i>
+                        <span>Quick Start</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="faq-support.html" class="nav-link">
+                        <i class="fas fa-circle-question"></i>
+                        <span>FAQ</span>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="#" class="nav-link" data-page="profiles">
                         <i class="fas fa-users"></i>
                         <span>Profiles</span>
