--- a/ui/index.html
+++ b/ui/index.html
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link" data-page="profiles">
+                    <a href="profiles.html" class="nav-link">
                         <i class="fas fa-users"></i>
                         <span>Profiles</span>
                     </a>
