Docker IP variable added.

--- a/ui/index.html
+++ b/ui/index.html
@@ -247,6 +247,9 @@
     </div>
 
     <!-- Scripts -->
+    <!-- Load environment configuration first (generated at runtime from docker env vars) -->
+    <script src="js/env.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/api-client.js"></script>
     <script src="js/websocket-client.js"></script>
     <script src="js/dashboard.js"></script>
