--- a/ui/profiles.html
+++ b/ui/profiles.html
@@ -224,7 +224,7 @@
 
     <!-- Scripts -->
     <!-- Load environment configuration first (generated at runtime from docker env vars) -->
-    <script src="js/env.js"></script>
+    <script src="js/env.js" onerror="console.warn('env.js not found; using defaults and hostname detection from config.js')"></script>
     <script src="js/config.js"></script>
     <script src="js/api-client.js"></script>
     <script src="js/websocket-client.js"></script>
